[tool.poetry]
name = "home-work11"
version = "0.1.0"
description = ""
authors = ["Іван Лубик <126516121+ivanlubyk@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "home_work11"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.100.1"}
alembic = "^1.11.1"
sqlalchemy = "^2.0.19"
asyncpg = "^0.28.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
